src/objects/Payment_Notification__c.object
<CustomObject>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Typee__c</fullName>
        <label>Notification Type</label>
        <picklist>
            <picklistValues>
                <fullName>IPN / Silent Post</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Webservice Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payment Notifications</relationshipLabel>
        <relationshipName>Payment_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Transaction_Id__c</fullName>
        <label>Parent Transaction Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Email__c</fullName>
        <label>Payer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payer_ID__c</fullName>
        <label>Payer ID</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Error__c</fullName>
        <inlineHelpText>The apex exception message for a notification that can&apos;t be processed successfully</inlineHelpText>
        <label>Processing Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_Email__c</fullName>
        <label>Receiver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recurring_Transaction_Id__c</fullName>
        <label>Recurring Transaction Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Payment Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Transaction_Id__c</columns>
        <columns>Payer_Email__c</columns>
        <columns>Receiver_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>IsTest__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Notifications</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>RealIPN</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Transaction_Id__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>IsProcessed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsTest__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Real Notifications</label>
    </listViews>
    <listViews>
        <fullName>TestIPN</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Transaction_Id__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Payment_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsTest__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Test Notifications</label>
    </listViews>
    <listViews>
        <fullName>Unhandled_Notifications</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Payer_Email__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Transaction_Id__c</columns>
        <columns>Parent_Transaction_Id__c</columns>
        <columns>Processing_Error__c</columns>
        <columns>IsTest__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsProcessed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Notifications Not Processed</label>
    </listViews>
    <nameField>
        <label>Notification Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>